Trying to fix horizontal overflow

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ html, body{
 
 body{
     margin: 0;
+    overflow-x: hidden;
 }
 
 div.outer-container{
